--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
+    "react-script-tag": "^1.1.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
@@ -36,7 +38,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "less": "^4.1.2"
-  }
+  "devDependencies": {}
 }
